update paraglide and more

--- a/static/recipes/302-pate-levee-feuilletee.yml
+++ b/static/recipes/302-pate-levee-feuilletee.yml
@@ -3,62 +3,29 @@ name:
   fr: 302 - Pâte levée feuilletée
 ingredients:
   - name: allPurposeFlour
-    percentage: 40
-  - name: flour00
-    percentage: 60
+    percentage: 100
   - name: whiteSugar
     percentage: 14
   - name: salt
-    percentage: 2
+    percentage: 1.8
   - name: instantYeast
     percentage: 2
   - name: unsaltedButter82
     percentage: 10
   - name: wholeMilk3_25
-    percentage: 20
+    percentage: 23
   - name: water
-    percentage: 30
+    percentage: 23
   - name: unsaltedButter82
-    percentage: 54
-presetTotalIngredient: 600
+    percentage: 50
+presetTotalIngredient: 537
 process:
   fr: |
-    -
+    - 1 tour double, 1 tour simple (abaisse 4mm)
+    - Chocolat longueur 8cm
+    - Cuisson 170C ventilé 20mins
 notes:
   fr: |
     -
 references:
-  -
-  # - https://www.youtube.com/watch?v=al--1T_9lgM
-  # - https://www.youtube.com/watch?v=Ku9wAbLbI9A
-  # - http://technomitron.aainb.com/constituants-viennoiserie-patisserie/le-beurre/
-  # - https://karine-cuisine.blogspot.com/2017/08/les-croissants-la-pate-feuilletee-levee.html
-  # - http://technomitron.aainb.com/recettes-2/viennoiserie/pate-levee-feuilletee-riche-sur-poolish-1-3-rapide/
-  # - https://www.youtube.com/watch?v=tO4C1Ur-OZA
-  # - https://www.youtube.com/watch?v=TN4jkD43ymI
-  # - https://www.youtube.com/watch?v=9nqe3Pjh5F8
-  # - https://www.youtube.com/watch?v=9-pZt0_wMDQ
-  # - https://www.youtube.com/watch?v=50-yxbahn5I
-  # - https://www.youtube.com/watch?v=2wsiqF65Dec
-  # - https://www.youtube.com/watch?v=QBHdCd0u6UE
-  # - https://www.youtube.com/watch?v=zJB0MWkyy4c
-  # - https://www.youtube.com/watch?v=bWkqIdZZJdY
-# ## Cuisson
-# > 17mins 200°C ventilé sur plaque perforée :
-# > 17mins 190°C ventilé sur plaque perforée.
-# > 18mins 180°C ventilé sur plaque perforée.
-# > 1min30 200°C ventilé puis 18mins 175°C sur plaque perforée.
-# > choco 175°C 17mins + 3mins 160°C
-
-# # Notes
-# - Cuisson 160-210°C, minimum 16mins
-# - Mise en plaque : ouverture dos au vent de la ventilation du four pour éviter l'ouverture à la cuisson. Sens horaire
-# - Farine forte en protéines pour être plus riche en gluten 13/15g prot/100g
-# - Beurre froid "dur", sortir le beurre. Attendre jusqu'à qu'il soit plastique puis sortir le paton. Pour avoir la même consistence
-# - Test de pétrissage : prendre une part, bouler, étirer. Réseau non créée = le croissant peut casser à la pousse
-
-# english lock in 5ply
-# abaisse 4mm, tour simple, spray entre les tours pour aider à coller
-# abaisse 5mm, repli en 2
-# croissant 30x10cm
-
+  - https://www.instagram.com/p/DF-vR2rNg3G/
